--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-tooltip": "^5.28.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,5 +44,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
+    "typescript-eslint": "^8.19.0"
+  }
 }
